# all-set

./: gitignore
all_set/: Dockerfile  deleteme  manage.py  pyproject.toml  requirements.txt  temp.txt
all_set/ai_api/: serializers.py  urls.py  utils.py  views.py
all_set/ai_api/templates/: questions_page copy.html  questions_page.html  upload_page copy.html  upload_page.html
all_set/ai_api/utils/: gemini_helper.py  openai_helper.py
all_set/all_set/: asgi.py  settings.py  urls.py  wsgi.py
